--- a/documentation/projekt_interfejs_136224_kczarnecki.tex
+++ b/documentation/projekt_interfejs_136224_kczarnecki.tex
@@ -26,20 +26,19 @@
 \tableofcontents
 
 % zad 1
-\section{Opis zamówienia}
-\input{zad1.tex}
+\section{Autorzy}
+\input{autorzy.tex}
 
-\section{Pierwsza iteracja}
-\input{zad2.tex}
+\section{Opis projektu}
+\input{opis.tex}
 
-\section{Druga iteracja}
-\input{zad3.tex}
+\section{Wybrane technologie}
+\input{techno.tex}
 
-\section{Trzecia iteracja}
-\input{zad4.tex}
+\section{Zadania}
+\input{zadania.tex}
 
-\section{Efekt końcowy}
-\input{zad5.tex}
+\input{literatura.tex}
 
 \end{document}
 
