main page refactor - title fix - tableofcontents fix

--- a/documentation/dokumentacja_BD.tex
+++ b/documentation/dokumentacja_BD.tex
@@ -17,13 +17,13 @@
 
 \begin{document}
 
-\title{Sprawozdanie Grafika Komputerowa\\Opis interfejsu aplikacji: Foods}
-\author{Krzysztof Czarnecki, 136224, WE, Informatyka}
+\title{Bazy Danych\\Projekt Karta Pacjenta}
 \date{\today}
 
 \maketitle
 
 \tableofcontents
+\clearpage
 
 % zad 1
 \section{Autorzy}
