--- a/documentation/dokumentacja_BD.tex
+++ b/documentation/dokumentacja_BD.tex
@@ -35,7 +35,7 @@
 \section{Wybrane technologie}
 \input{techno.tex}
 
-\section{Zadania}
+\section{Implementacja}
 \input{zadania.tex}
 
 \input{literatura.tex}
