--- a/documentation/opis.tex
+++ b/documentation/opis.tex
@@ -1,1 +1,5 @@
-Generowanie raportu z badania dla pacjenta (format PDF, ODT, DOC, lub inny).
+Projekt zakładał stworzenie aplikacji umożliwiającej przechowywanie danych pacjentów w serwisie bazodanowym. Aplikacja miała być swoistą kartą pacjenta przechowującą informacje dotyczące chorób przebytych przez pacjenta. Ma ona umożliwiać bezpieczne przechowywanie danych wrażliwych, takich jak pesel, numer telefonu itd. Umożliwia ona także prezentację tych danych oraz ich eksport (także w postaci anonimowej - bez danych osobowych - posiadających tylko informację o przebytej chorobie, nie o pacjencie). 
+
+Aplikacja powstała przy użyciu języków: Java (\textit{backend}) oraz Angular (TypeScript) \textit{frontend}. Serwis postawiony jest na darmowej domenie \url{http://trunk-kartapacjenta.herokuapp.com/}. Gorąco zachęcamy do zapoznania się z działaniem aplikacji. 
+
+Dzięki serwisowi \href{https://heroku.com/} {Heroku} możliwe było darmowe opublikowanie witryny w internecie. Nawet w darmowej wersji serwis ten zapewnia usługi związane z CI \textit{continuous integration}. Efektem tego, jest fakt, że po każdej aktualizacji zdalnego repozystorium \textit{Git} serwis automatycznie przebudowuje się.
