--- a/documentation/zadania.tex
+++ b/documentation/zadania.tex
@@ -1,12 +1,26 @@
 \begin{enumerate}
-    \item Założenie repozytorium - GitHub.
-    \item Stworzenie projektu bazy danych.
-    \item Narysowanie schematu ER.
     \item Napisanie serwera.
-    \item Rest API serwisu.
     \item Dodanie zabezpieczeń użytkownika.
     \item Anonimizacja danych w bazie.
-    \item Dodanie logowania do systemu.
     \item Testy obciążeniowe.
-    \item Stworzenie dokumentacji.
 \end{enumerate}
+
+\subsection{Kontrola wersji}
+Do pracy zespołowej wykorzystaliśmy znane i lubiane narzędzie \textit{GitHub}. Umożliwiło nam to sprawne dzielenie się zmianami w kodzie, zarządzanie i wersjonowanie go.
+
+\subsection{Baza danych}
+\begin{figure}[H]
+\centering
+\includegraphics[width=15cm]{pictures/diagram}
+\caption{Diagram ER bazy danych}
+\end{figure}
+
+\subsection{Aplikacja - backend}
+\input{backend.tex}
+
+\subsection{Aplikacja - frontend}
+\input{frontend.tex}
+
+\subsection{Testy obciążeniowe}
+\input{testy.tex}
+
