backend documentation added

--- a/documentation/backend.tex
+++ b/documentation/backend.tex
@@ -1,7 +1,14 @@
 \subsubsection{Endpointy}
+Dzięki ogromnej popularności aplikacji internetowych opartych na języku \textit{Java} oraz \textit{framework Spring} możliwe było szybkie wygenerowanie dokumentacji \textit{Open API}. Pod \href{https://trunk-kartapacjentaservice.herokuapp.com/swagger-ui.html} {linkiem} dostępny jest spis wszystkich dostępnych w serwisie endpointów. Wejście w ten link będzie wymagało podania loginu i hasła (dostępnego tutaj: \ref{credentials}).
+
 \subsubsection{Dlaczego REST?}
+
 \subsubsection{Zabezpieczenie danych - API}
+Większość \textit{endpointów} dostępnych w serwisie zapezpieczone jest przy użyciu metody \textit{Basic Auth}. Bez podania loginu i hasła niemożliwy jest dostęp do serwisu. Jedyne dostępne bez konieczności autoryzacji endpointy to te dotyczące logowania i rejestracji.
+
 \subsubsection{Zabezpieczenie danych - baza danych}
+
+
 \subsubsection{Ograniczenia}
 \subsubsection{Możliwości dotyczące rozwoju - przyspieszenie}
 \subsubsection{Rola serwera CRUD w aplikacji}
