--- a/documentation/dokumentacja_BD.tex
+++ b/documentation/dokumentacja_BD.tex
@@ -32,7 +32,7 @@
 \section{Opis projektu}
 \input{opis.tex}
 
-\section{Wybrane technologie}
+\section{Wykorzystane technologie}
 \input{techno.tex}
 
 \section{Implementacja}
