--- a/documentation/opis.tex
+++ b/documentation/opis.tex
@@ -3,3 +3,11 @@ Projekt zakładał stworzenie aplikacji umożliwiającej przechowywanie danych p
 Aplikacja powstała przy użyciu języków: Java (\textit{backend}) oraz Angular (TypeScript) \textit{frontend}. Serwis postawiony jest na darmowej domenie \url{http://trunk-kartapacjenta.herokuapp.com/}. Gorąco zachęcamy do zapoznania się z działaniem aplikacji. 
 
 Dzięki serwisowi \href{https://heroku.com/} {Heroku} możliwe było darmowe opublikowanie witryny w internecie. Nawet w darmowej wersji serwis ten zapewnia usługi związane z CI \textit{continuous integration}. Efektem tego, jest fakt, że po każdej aktualizacji zdalnego repozystorium \textit{Git} serwis automatycznie przebudowuje się.
+
+\subsection{Testowanie aplikacji}
+Do dogłęnego przetestowania aplikacji wymagane jest, aby skorzystać z konta administratora - konta różnych użytkowników posiadają różne uprawnienia. Administrator ma dostęp do wszystkich możliwych miejsc na stronie. Podczas testowania aplikacji proszę używać konta:\\
+\begin{center}
+\label{credentials}
+login: admin\\
+hasło: admin
+\end{center}
