--- a/documentation/zadania.tex
+++ b/documentation/zadania.tex
@@ -1,19 +1,8 @@
-\begin{enumerate}
-    \item Napisanie serwera.
-    \item Dodanie zabezpieczeń użytkownika.
-    \item Anonimizacja danych w bazie.
-    \item Testy obciążeniowe.
-\end{enumerate}
-
 \subsection{Kontrola wersji}
 Do pracy zespołowej wykorzystaliśmy znane i lubiane narzędzie \textit{GitHub}. Umożliwiło nam to sprawne dzielenie się zmianami w kodzie, zarządzanie i wersjonowanie go.
 
 \subsection{Baza danych}
-\begin{figure}[H]
-\centering
-\includegraphics[width=15cm]{pictures/diagram}
-\caption{Diagram ER bazy danych}
-\end{figure}
+\input{baza.tex}
 
 \subsection{Aplikacja - backend}
 \input{backend.tex}
