dodanie plikow Please enter the commit message for your changes. Lines starting

--- a/documentation/frontend.tex
+++ b/documentation/frontend.tex
@@ -1,3 +1,5 @@
 \subsubsection{Działanie warstwy wizualnej}
 \subsubsection{Prostota implementacji i wieloplatformowość}
+\input{frontimpl.tex}
 \subsubsection{Rola warstwy wizualnej aplikcji}
+\input{frontrola.tex}
