structure refactor + testy added

--- a/documentation/frontend.tex
+++ b/documentation/frontend.tex
@@ -1,5 +1,5 @@
 \subsubsection{Działanie warstwy wizualnej}
 \subsubsection{Prostota implementacji i wieloplatformowość}
-\input{frontimpl.tex}
+\input{front/frontimpl.tex}
 \subsubsection{Rola warstwy wizualnej aplikcji}
-\input{frontrola.tex}
+\input{front/frontrola.tex}
