--- a/documentation/backend.tex
+++ b/documentation/backend.tex
@@ -1,6 +1,7 @@
 \subsubsection{Endpointy}
 Dzięki ogromnej popularności aplikacji internetowych opartych na języku \textit{Java} oraz \textit{framework Spring} możliwe było szybkie wygenerowanie dokumentacji \textit{Open API}. Pod \href{https://trunk-kartapacjentaservice.herokuapp.com/swagger-ui.html} {linkiem} dostępny jest spis wszystkich dostępnych w serwisie endpointów. Wejście w ten link będzie wymagało podania loginu i hasła (dostępnego tutaj: \ref{credentials}).
 
+\clearpage
 \subsubsection{Dlaczego REST?}
 \input{restapi.tex}
 
@@ -8,8 +9,9 @@ Dzięki ogromnej popularności aplikacji internetowych opartych na języku \text
 Większość \textit{endpointów} dostępnych w serwisie zapezpieczone jest przy użyciu metody \textit{Basic Auth}. Bez podania loginu i hasła niemożliwy jest dostęp do serwisu. Jedyne dostępne bez konieczności autoryzacji endpointy to te dotyczące logowania i rejestracji.
 
 \subsubsection{Zabezpieczenie danych - baza danych}
-
+Do zabezpieczenia danych skorzystaliśmy z hashowania danych wbudowanego w API Springa.
 
 \subsubsection{Ograniczenia}
+W trakcie implementacji kolejnych funkcjonalności musieliśmy zmierzyć się z ograniczeniami serwera Heroku. Obsługa requestów jest jednowątkowa, stąd testowanie jego wydajności jest mocno ograniczone.
+Skorzystanie z darmowej domeny sprawia, że funkcjonowanie strony jest po prostu wolne.
 \subsubsection{Możliwości dotyczące rozwoju - przyspieszenie}
-\subsubsection{Rola serwera CRUD w aplikacji}
