--- a/documentation/testy.tex
+++ b/documentation/testy.tex
@@ -1,4 +1,8 @@
 \subsubsection{Testowane zagadnienia}
+\input{testy/testowane_zagadnienia.tex}
 \subsubsection{Wielowątkowość}
+\input{testy/wielowatkowosc.tex}
 \subsubsection{Szybkość działania aplikacji}
+\input{testy/szybkoscdzialaniaaplikacji.tex}
 \subsubsection{Rola testów w rozwoju aplikacji}
+\input{testy/rolatestow.tex}
