documentation - front text fix

--- a/documentation/front/frontimpl.tex
+++ b/documentation/front/frontimpl.tex
@@ -1,1 +1,3 @@
-Frontend i Backend zostały oddzielone od siebie podczas implementacji. Dzięki temu, otrzymaliśmy możliwość łatwego skalowania systemu oraz optymalizacji wykonywanych akcji, gdyż obsługa wszystkich zdarzeń stoi po stronie serwera. Ponadto, stała się możliwa równoległa praca nad wybranymi modułami, bezproblemowa migracja na inny framework lub dowolna zmiana wystroju aplikacji. 
+Frontend i Backend zostały oddzielone od siebie podczas implementacji - osobne repozytoria git.
+W części Frontendu skorzystano z Bootsrapa, a obsługę akcji wykonuje inny framework TypeScryptowy - Angular.
+Rozdzielnie projektu w taki sposób, umożliwia oddzielną pracę nad tymi częściami.
