refactored files & changed authors desc

--- a/documentation/dokumentacja_BD.tex
+++ b/documentation/dokumentacja_BD.tex
@@ -27,18 +27,18 @@
 
 % zad 1
 \section{Autorzy}
-\input{autorzy.tex}
+\input{00-autorzy.tex}
 
 \section{Opis projektu}
-\input{opis.tex}
+\input{01-opis.tex}
 
 \section{Wykorzystane technologie}
-\input{techno.tex}
+\input{02-techno.tex}
 
 \section{Implementacja}
-\input{zadania.tex}
+\input{03-zadania.tex}
 
-\input{literatura.tex}
+\input{04-literatura.tex}
 
 \end{document}
 
