--- a/documentation/frontend.tex
+++ b/documentation/frontend.tex
@@ -1,6 +1,6 @@
 \subsubsection{Działanie warstwy wizualnej}
 Warstwa wizualna oparta jest na koncepcie reakcyjnego obsługiwania zdarzeń użytkownika końcowego. Zamiast przeładowania strony po wykonaniu akcji związanej z zdarzeniem wejścia aplikacji widoku preferowane jest odświeżenie jej części.
 \subsubsection{Prostota implementacji i wieloplatformowość}
-\input{frontimpl.tex}
+\input{front/frontimpl.tex}
 \subsubsection{Rola warstwy wizualnej aplikcji}
-\input{frontrola.tex}
+\input{front/frontrola.tex}
