--- a/documentation/00-autorzy.tex
+++ b/documentation/00-autorzy.tex
@@ -1,4 +1,4 @@
-
+\section{Autorzy}
    \large
 {
 \textbf{Krzysztof Czarnecki}  - implementacja niewidocznej dla użytkownika części programu, która posiada dostęp do wymaganych zasobów (ang. \textit{backend}) \\
