--- a/documentation/02-techno.tex
+++ b/documentation/02-techno.tex
@@ -1,7 +1,8 @@
+\section{Wykorzystane technologie}
 \begin{itemize}
-    \item Spring Boot
-    \item Spring Security
-    \item PostgreSQL
-    \item Java
-    \item Angular
+	\item Język Programowania \textbf{Java} - (ang. \textit{backend}),
+	\item Szkielet aplikacyjny (ang. \textit{framework}) \textbf{Spring Boot} - wykorzystywany do programowania logiki serwisu internetowego (ang. \textit{backend}),
+	\item Szkielet aplikacyjny (ang. \textit{framework}) \textbf{Spring Security} - wykorzystywany do zabezpieczenia dostępów do punktów dostępowych serwisu internetowego (ang. \textit{endpoint}),
+	\item Szkielet aplikacyjny (ang. \textit{framework}) \textbf{Angular CLI} - wykorzystywany do utworzenia warstwy wizualnej aplikacji (ang. \textit{frontend}),
+	\item System zarządzania relacyjnymi bazami danych \textbf{PostgreSQL}.
 \end{itemize}
