--- a/documentation/03-zadania.tex
+++ b/documentation/03-zadania.tex
@@ -1,3 +1,4 @@
+\section{Implementacja}
 \subsection{Kontrola wersji}
 Do pracy zespołowej wykorzystaliśmy znane i lubiane narzędzie \textit{GitHub}. Umożliwiło nam to sprawne dzielenie się zmianami w kodzie, zarządzanie i wersjonowanie go.
 
