--- a/documentation/03-zadania.tex
+++ b/documentation/03-zadania.tex
@@ -1,9 +1,8 @@
 \section{Implementacja}
 \subsection{Kontrola wersji}
-Do pracy zespołowej wykorzystaliśmy znane i lubiane narzędzie \textit{GitHub}. Umożliwiło nam to sprawne dzielenie się zmianami w kodzie, zarządzanie i wersjonowanie go.
+Do pracy zespołowej wykorzystano narzędzie \textit{Git}. Umożliwiło ono sprawne dzielenie się zmianami w kodzie, zarządzanie i wersjonowanie zmian.
 
-\subsection{Baza danych}
-\input{baza.tex}
+\input{03-1baza.tex}
 
 \subsection{Aplikacja - backend}
 \input{backend.tex}
