--- a/documentation/dokumentacja_BD.tex
+++ b/documentation/dokumentacja_BD.tex
@@ -6,6 +6,9 @@
 \usepackage{url}
 \usepackage{graphicx}
 \usepackage{float}
+\usepackage{xcolor,listings}
+\usepackage{textcomp}
+\lstset{upquote=true}
 
 \addtolength{\hoffset}{-1.5cm}
 \addtolength{\marginparwidth}{-1.5cm}
