backend desc updated

--- a/documentation/03-1baza.tex
+++ b/documentation/03-1baza.tex
@@ -7,6 +7,8 @@ Na rysunku \ref{diagram} przedstawiony jest diagram ER schematu bazy danych.
 \label{diagram}
 \end{figure}
 
+
+Poniżej przedstawiono kod SQL wykorzystywany do inicjalizacji bazy danych:
 \begin{lstlisting}[
            language=SQL,
            showspaces=false,
