--- a/documentation/03-2backend.tex
+++ b/documentation/03-2backend.tex
@@ -1,4 +1,5 @@
-\subsubsection{Endpointy}
+\subsection{Logika aplikacji (ang. \textit{backend})}
+\subsubsection{Punkty dostępowe \textit{enpoint}}
 Dzięki ogromnej popularności aplikacji internetowych opartych na języku \textit{Java} oraz \textit{framework Spring} możliwe było szybkie wygenerowanie dokumentacji \textit{Open API}. Pod \href{https://trunk-kartapacjentaservice.herokuapp.com/swagger-ui.html} {linkiem} dostępny jest spis wszystkich dostępnych w serwisie endpointów. Wejście w ten link będzie wymagało podania loginu i hasła (dostępnego tutaj: \ref{credentials}).
 
 \clearpage
