--- a/documentation/03-zadania.tex
+++ b/documentation/03-zadania.tex
@@ -3,9 +3,7 @@
 Do pracy zespołowej wykorzystano narzędzie \textit{Git}. Umożliwiło ono sprawne dzielenie się zmianami w kodzie, zarządzanie i wersjonowanie zmian.
 
 \input{03-1baza.tex}
-
-\subsection{Aplikacja - backend}
-\input{backend.tex}
+\input{03-2backend.tex}
 
 \subsection{Aplikacja - frontend}
 \input{frontend.tex}
