--- a/documentation/03-2backend.tex
+++ b/documentation/03-2backend.tex
@@ -1,18 +1,24 @@
 \subsection{Logika aplikacji (ang. \textit{backend})}
-\todo{Tu skończyłem. Dokończyć odtąd!!}
-\subsubsection{Punkty dostępowe \textit{enpoint}}
-Dzięki ogromnej popularności aplikacji internetowych opartych na języku \textit{Java} oraz \textit{framework Spring} możliwe było szybkie wygenerowanie dokumentacji \textit{Open API}. Pod \href{https://trunk-kartapacjentaservice.herokuapp.com/swagger-ui.html} {linkiem} dostępny jest spis wszystkich dostępnych w serwisie endpointów. Wejście w ten link będzie wymagało podania loginu i hasła (dostępnego tutaj: \ref{credentials}).
+
+\subsubsection{Punkty dostępowe (ang. \textit{enpoint})}
+Dzięki ogromnej popularności aplikacji internetowych opartych na języku \textit{Java} oraz \textit{framework'a Spring} możliwe było szybkie wygenerowanie dokumentacji \textit{Open API}. Pod \href{https://trunk-kartapacjentaservice.herokuapp.com/swagger-ui.html} {linkiem} dostępny jest spis wszystkich dostępnych w serwisie endpointów. Wejście w ten link będzie wymagało podania loginu i hasła (dostępnego tutaj: \ref{credentials}).
 
 \clearpage
-\subsubsection{Dlaczego REST?}
-\input{restapi.tex}
+\input{03-01restapi.tex}
 
 \subsubsection{Zabezpieczenie danych - API}
-Większość \textit{endpointów} dostępnych w serwisie zapezpieczone jest przy użyciu metody \textit{Basic Auth}. Bez podania loginu i hasła niemożliwy jest dostęp do serwisu. Jedyne dostępne bez konieczności autoryzacji endpointy to te dotyczące logowania i rejestracji.
+Większość punktów dostępowych dostępnych w serwisie zabezpieczone jest przy użyciu metody \textit{Basic Auth}. Bez podania loginu i hasła niemożliwy jest dostęp do serwisu. Jedyne dostępne bez konieczności autoryzacji punkty dostępowe to te dotyczące logowania i rejestracji.
 
 \subsubsection{Zabezpieczenie danych - baza danych}
-Do zabezpieczenia danych skorzystaliśmy z hashowania danych, przy użyciu klucza symetrycznego wbudowanego w API Springa.
+Do zabezpieczenia danych skorzystaliśmy z symetrycznego szyfrowania. Informacje przechowywane w bazie są niemożliwe do odszyfrowania bez użycia klucza. Dane w punktach dostępowych są odszyfrowane. Odszyfrowywaniem zajmuje się aplikacja odpowiadająca za logikę serwisu.
 
+\begin{figure}[H]
+\centering
+\includegraphics[width=15cm]{pictures/bd-encr}
+\caption{Zaszyfrowane krotki bazy danych. Widoczne jest, że ciągi znaków zapisane w bazie danych nie są możliwe do odszyfrowania bez dekodowania.}
+\end{figure}
+
+\todo{Tu skończyłem}
 \subsubsection{Ograniczenia}
 W trakcie implementacji kolejnych funkcjonalności musieliśmy zmierzyć się z ograniczeniami serwera Heroku. Obsługa requestów jest jednowątkowa, stąd testowanie jego wydajności jest mocno ograniczone.
 Skorzystanie z darmowej domeny sprawia, że funkcjonowanie strony jest po prostu wolne.
