--- a/documentation/dokumentacja_BD.tex
+++ b/documentation/dokumentacja_BD.tex
@@ -11,8 +11,8 @@
 \lstset{upquote=true}
 
 \usepackage{color}
-\newcommand{\todo}[1]{\\ \textcolor{red}{TODO: #1}\PackageWarning{TODO:}{#1!}}
-%\newcommand{\todo}[1]{\\ \textcolor{red}{TODO: #1}}
+%\newcommand{\todo}[1]{\\ \textcolor{red}{TODO: #1}\PackageWarning{TODO:}{#1!}}
+\newcommand{\todo}[1]{\\ \textcolor{red}{TODO: #1}}
 
 \addtolength{\hoffset}{-1.5cm}
 \addtolength{\marginparwidth}{-1.5cm}
