--- a/documentation/03-zadania.tex
+++ b/documentation/03-zadania.tex
@@ -2,12 +2,8 @@
 \subsection{Kontrola wersji}
 Do pracy zespołowej wykorzystano narzędzie \textit{Git}. Umożliwiło ono sprawne dzielenie się zmianami w kodzie, zarządzanie i wersjonowanie zmian.
 
-\input{03-1baza.tex}
-\input{03-2backend.tex}
-
-\subsection{Aplikacja - frontend}
-\input{frontend.tex}
-
-\subsection{Testy obciążeniowe}
-\input{testy.tex}
+\input{03-01baza.tex}
+\input{03-02backend.tex}
+\input{03-04frontend.tex}
+\input{04-testy.tex}
 
