--- a/documentation/04-testy.tex
+++ b/documentation/04-testy.tex
@@ -1,3 +1,5 @@
+\subsection{Testy obciążeniowe}
+
 \subsubsection{Testowane zagadnienia}
 \input{testy/testowane_zagadnienia.tex}
 \subsubsection{Wielowątkowość}
