--- a/documentation/front/frontimpl.tex
+++ b/documentation/front/frontimpl.tex
@@ -1,3 +1,4 @@
-Frontend i Backend zostały oddzielone od siebie podczas implementacji - osobne repozytoria git.
-W części Frontendu skorzystano z Bootsrapa, a obsługę akcji wykonuje inny framework TypeScryptowy - Angular.
-Rozdzielnie projektu w taki sposób, umożliwia oddzielną pracę nad tymi częściami.
+\subsubsection{Prostota implementacji i wieloplatformowość}
+Warstwa wizualna oraz warstwa serwisowa zostały oddzielone od siebie podczas implementacji - osobne repozytoria Git oraz osobne kontenery na serwerze. Rozdzielenie aplikacji w ten sposób umożliwia zapewnienie sposobu dostarczania aplikacji zgodnej z Ciągłą Integracją (ang. \textit{Continuous integration}). Umożliwia to nieprzerwane działanie aplikacji oraz odizolowuje pracę nad częścią wizualną od części logiki aplikacji. 
+
+Podczas stylowania aplikacji wykorzystano framework Bootstrap. Obsługa akcji wykonywana jest przy użyciu frameworka Angular 7.
