--- a/documentation/03-04frontend.tex
+++ b/documentation/03-04frontend.tex
@@ -1,6 +1,6 @@
+\subsection{Warstwa wizualna aplikacji ,,Karta Pacjenta'' (ang. \textit{frontend})}
 \subsubsection{Działanie warstwy wizualnej}
 Warstwa wizualna oparta jest na koncepcie reakcyjnego obsługiwania zdarzeń użytkownika końcowego. Zamiast przeładowania strony po wykonaniu akcji związanej z zdarzeniem wejścia aplikacji widoku preferowane jest odświeżenie jej części.
-\subsubsection{Prostota implementacji i wieloplatformowość}
+
 \input{front/frontimpl.tex}
-\subsubsection{Rola warstwy wizualnej aplikcji}
 \input{front/frontrola.tex}
