--- a/documentation/front/frontrola.tex
+++ b/documentation/front/frontrola.tex
@@ -1,4 +1,5 @@
-Frontend jest kanałem komunikacji między serwerem a klientem. Taka zależność zapewnia szybkie wykonywanie akcji
+\subsubsection{Rola warstwy wizualnej aplikacji}
+Warstwa wizualna aplikacji jest kanałem komunikacji między serwerem a klientem. Taka zależność zapewnia szybkie wykonywanie akcji
 zadanych przez użytkownika bez znajomości wewnętrznej implementacji serwisu.
-Podczas tworzenia "Karty Pacjenta" starano się, aby wystrój był maksymalnie przejrzysty,
+Podczas tworzenia aplikacji ,,Karta Pacjenta'' starano się, aby wystrój był maksymalnie przejrzysty,
 wszystkie funkcjonalności opisane i rozmieszczone w jednoznaczny sposób, a komunikacja między serwerem a klientem była jak najszybsza.
