--- a/documentation/testy/rolatestow.tex
+++ b/documentation/testy/rolatestow.tex
@@ -1,1 +1,2 @@
-Testy pomagają zweryfikować, czy postawione endpointy spełniają swoją rolę.
+\subsubsection{Rola testów w rozwoju aplikacji}
+Pierwszą, dość oczywistą rolą testów, podczas tworzenia aplikacji jest weryfikacja poprawności implementacji zadań. Aplikacja, zanim zostanie przekazana klientowi powinna przejść szereg testów automatycznych jak i manualnych. Wykorzystanie dobrze napisanych testów automatycznych pozwala na zmniejszenie liczby osób (testerów), którzy odpowiedzialni są za manualne sprawdzenie poprawności działania aplikacji.
