--- a/documentation/testy/wielowatkowosc.tex
+++ b/documentation/testy/wielowatkowosc.tex
@@ -1,2 +1,3 @@
+\subsubsection{Wielowątkowość}
 Wielowątkowość została zaimplementowana po to, aby możliwie najlepiej oddać realny sposób użytkowania.
 W jednym momencie tysiące użytkowników może zażądać tego samego zbioru danych. Każde z urządzeń powinno zostać poprawnie obsłużone.
