--- a/documentation/00-autorzy.tex
+++ b/documentation/00-autorzy.tex
@@ -1,8 +1,8 @@
 \section{Autorzy}
    \large
 {
-\textbf{Krzysztof Czarnecki}  - implementacja niewidocznej dla użytkownika części programu, która posiada dostęp do wymaganych zasobów (ang. \textit{backend}) \\
-\textbf{Błażej Czekała} - implementacja testów obciążeniowych, z użyciem wielowątkowości\\
-\textbf{Patryk Wenz} - implementacja wyglądu i zachowania strony (ang. \textit{frontend})\\
-\textbf{Hubert Braun} - implementacja bazy danych i jej obsługi
+%\textbf{Krzysztof Czarnecki}  - implementacja niewidocznej dla użytkownika części programu, która posiada dostęp do wymaganych zasobów (ang. \textit{backend}) \\
+%\textbf{Błażej Czekała} - implementacja testów obciążeniowych, z użyciem wielowątkowości\\
+%\textbf{Patryk Wenz} - implementacja wyglądu i zachowania strony (ang. \textit{frontend})\\
+%\textbf{Hubert Braun} - implementacja bazy danych i jej obsługi
 } 
