--- a/documentation/01-opis.tex
+++ b/documentation/01-opis.tex
@@ -67,7 +67,7 @@ umożliwia zapoznanie się z dostępnymi informacjami dotyczącymi danej choroby
 \end{figure}
 
 % json normal
-Serwis umożliwia wygenerowanie danych o pacjencie i przebytych chorobach w zunifikowanym formacie \textit{JSON}. Jest to możliwe na stronie związanej w historią choroby pacjenta, przedstawionej na rysunku \ref{history_pic}.
+Serwis umożliwia wygenerowanie danych o pacjencie i przebytych chorobach w zunifikowanym formacie \textit{JSON}. 
 \begin{figure}[H]
 \centering
 \includegraphics[width=15cm]{pictures/service/07-json_normal}
